parser/tiq_parser.go
// Code generated from TiqParser.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // TiqParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type TiqParser struct {
	*antlr.BaseParser
}

var TiqParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func tiqparserParserInit() {
	staticData := &TiqParserParserStaticData
	staticData.LiteralNames = []string{
		"", "'package'", "'const'", "'var'", "'func'", "'if'", "'else'", "'for'",
		"'true'", "'false'", "'return'", "'and'", "'or'", "'not'", "'null'",
		"'this'", "'new'", "'bar'", "'open'", "'high'", "'low'", "'close'",
		"'buy'", "'sell'", "'sellShort'", "'buyToCover'", "'at'", "'market'",
		"'stop'", "'limit'", "'contracts'", "'int'", "'real'", "'bool'", "'string'",
		"'time'", "'date'", "'timeseries'", "'enum'", "'class'", "'error'",
		"'list'", "'map'", "", "", "", "", "", "'('", "')'", "'['", "']'", "'{'",
		"'}'", "'='", "'*'", "'/'", "'+'", "'-'", "','", "'.'", "':'", "'''",
		"'<>'", "'<'", "'<='", "'>'", "'>='",
	}
	staticData.SymbolicNames = []string{
		"", "PACKAGE", "CONST", "VAR", "FUNC", "IF", "ELSE", "FOR", "TRUE",
		"FALSE", "RETURN", "AND", "OR", "NOT", "NULL", "THIS", "NEW", "BAR",
		"OPEN", "HIGH", "LOW", "CLOSE", "BUY", "SELL", "SELL_SHORT", "BUY_TO_COVER",
		"AT", "MARKET", "STOP", "LIMIT", "CONTRACTS", "INT", "REAL", "BOOL",
		"STRING", "TIME", "DATE", "TIMESERIES", "ENUM", "CLASS", "ERROR", "LIST",
		"MAP", "IDENTIFIER", "INT_VALUE", "REAL_VALUE", "DIGIT", "STRING_VALUE",
		"L_PAREN", "R_PAREN", "L_BRACKET", "R_BRACKET", "L_CURLY", "R_CURLY",
		"EQUAL", "STAR", "SLASH", "PLUS", "MINUS", "COMMA", "DOT", "COLON",
		"APOS", "NOT_EQUAL", "LESS_THAN", "LESS_OR_EQUAL", "GREATER_THAN", "GREATER_OR_EQUAL",
		"WS", "NEWLINE", "BLOCK_COMMENT", "LINE_COMMENT",
	}
	staticData.RuleNames = []string{
		"script", "packageDef", "constantsDef", "constantDef", "variablesDef",
		"variableDef", "functionDef", "class", "parameters", "parameterDecl",
		"results", "enumDef", "enumItem", "enumValue", "classDef", "property",
		"type", "timeSeriesType", "listType", "mapType", "keyType", "block",
		"statement", "varsDeclaration", "varDeclaration", "varsAssignmentOrFunctionCall",
		"ifStatement", "elseIfBlock", "elseBlock", "returnStatement", "expression",
		"unaryExpression", "expressionInParenthesis", "chainedExpression", "chainItem",
		"paramsExpression", "accessorExpression", "barExpression", "listExpression",
		"mapExpression", "keyValueCouple", "keyValue", "constantValueExpression",
		"timeValue", "dateValue", "boolValue", "errorValue", "fqIdentifier",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// TiqParserInit initializes any static state used to implement TiqParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewTiqParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func TiqParserInit() {
	staticData := &TiqParserParserStaticData
	staticData.once.Do(tiqparserParserInit)
}

// NewTiqParser produces a new parser instance for the optional input antlr.TokenStream.
func NewTiqParser(input antlr.TokenStream) *TiqParser {
	TiqParserInit()
	this := new(TiqParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &TiqParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "TiqParser.g4"

	return this
}

// TiqParser tokens.
const (
	TiqParserEOF              = antlr.TokenEOF
	TiqParserPACKAGE          = 1
	TiqParserCONST            = 2
	TiqParserVAR              = 3
	TiqParserFUNC             = 4
	TiqParserIF               = 5
	TiqParserELSE             = 6
	TiqParserFOR              = 7
	TiqParserTRUE             = 8
	TiqParserFALSE            = 9
	TiqParserRETURN           = 10
	TiqParserAND              = 11
	TiqParserOR               = 12
	TiqParserNOT              = 13
	TiqParserNULL             = 14
	TiqParserTHIS             = 15
	TiqParserNEW              = 16
	TiqParserBAR              = 17
	TiqParserOPEN             = 18
	TiqParserHIGH             = 19
	TiqParserLOW              = 20
	TiqParserCLOSE            = 21
	TiqParserBUY              = 22
	TiqParserSELL             = 23
	TiqParserSELL_SHORT       = 24
	TiqParserBUY_TO_COVER     = 25
	TiqParserAT               = 26
	TiqParserMARKET           = 27
	TiqParserSTOP             = 28
	TiqParserLIMIT            = 29
	TiqParserCONTRACTS        = 30
	TiqParserINT              = 31
	TiqParserREAL             = 32
	TiqParserBOOL             = 33
	TiqParserSTRING           = 34
	TiqParserTIME             = 35
	TiqParserDATE             = 36
	TiqParserTIMESERIES       = 37
	TiqParserENUM             = 38
	TiqParserCLASS            = 39
	TiqParserERROR            = 40
	TiqParserLIST             = 41
	TiqParserMAP              = 42
	TiqParserIDENTIFIER       = 43
	TiqParserINT_VALUE        = 44
	TiqParserREAL_VALUE       = 45
	TiqParserDIGIT            = 46
	TiqParserSTRING_VALUE     = 47
	TiqParserL_PAREN          = 48
	TiqParserR_PAREN          = 49
	TiqParserL_BRACKET        = 50
	TiqParserR_BRACKET        = 51
	TiqParserL_CURLY          = 52
	TiqParserR_CURLY          = 53
	TiqParserEQUAL            = 54
	TiqParserSTAR             = 55
	TiqParserSLASH            = 56
	TiqParserPLUS             = 57
	TiqParserMINUS            = 58
	TiqParserCOMMA            = 59
	TiqParserDOT              = 60
	TiqParserCOLON            = 61
	TiqParserAPOS             = 62
	TiqParserNOT_EQUAL        = 63
	TiqParserLESS_THAN        = 64
	TiqParserLESS_OR_EQUAL    = 65
	TiqParserGREATER_THAN     = 66
	TiqParserGREATER_OR_EQUAL = 67
	TiqParserWS               = 68
	TiqParserNEWLINE          = 69
	TiqParserBLOCK_COMMENT    = 70
	TiqParserLINE_COMMENT     = 71
)

// TiqParser rules.
const (
	TiqParserRULE_script                       = 0
	TiqParserRULE_packageDef                   = 1
	TiqParserRULE_constantsDef                 = 2
	TiqParserRULE_constantDef                  = 3
	TiqParserRULE_variablesDef                 = 4
	TiqParserRULE_variableDef                  = 5
	TiqParserRULE_functionDef                  = 6
	TiqParserRULE_class                        = 7
	TiqParserRULE_parameters                   = 8
	TiqParserRULE_parameterDecl                = 9
	TiqParserRULE_results                      = 10
	TiqParserRULE_enumDef                      = 11
	TiqParserRULE_enumItem                     = 12
	TiqParserRULE_enumValue                    = 13
	TiqParserRULE_classDef                     = 14
	TiqParserRULE_property                     = 15
	TiqParserRULE_type                         = 16
	TiqParserRULE_timeSeriesType               = 17
	TiqParserRULE_listType                     = 18
	TiqParserRULE_mapType                      = 19
	TiqParserRULE_keyType                      = 20
	TiqParserRULE_block                        = 21
	TiqParserRULE_statement                    = 22
	TiqParserRULE_varsDeclaration              = 23
	TiqParserRULE_varDeclaration               = 24
	TiqParserRULE_varsAssignmentOrFunctionCall = 25
	TiqParserRULE_ifStatement                  = 26
	TiqParserRULE_elseIfBlock                  = 27
	TiqParserRULE_elseBlock                    = 28
	TiqParserRULE_returnStatement              = 29
	TiqParserRULE_expression                   = 30
	TiqParserRULE_unaryExpression              = 31
	TiqParserRULE_expressionInParenthesis      = 32
	TiqParserRULE_chainedExpression            = 33
	TiqParserRULE_chainItem                    = 34
	TiqParserRULE_paramsExpression             = 35
	TiqParserRULE_accessorExpression           = 36
	TiqParserRULE_barExpression                = 37
	TiqParserRULE_listExpression               = 38
	TiqParserRULE_mapExpression                = 39
	TiqParserRULE_keyValueCouple               = 40
	TiqParserRULE_keyValue                     = 41
	TiqParserRULE_constantValueExpression      = 42
	TiqParserRULE_timeValue                    = 43
	TiqParserRULE_dateValue                    = 44
	TiqParserRULE_boolValue                    = 45
	TiqParserRULE_errorValue                   = 46
	TiqParserRULE_fqIdentifier                 = 47
)

// IScriptContext is an interface to support dynamic dispatch.
type IScriptContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	PackageDef() IPackageDefContext
	AllConstantsDef() []IConstantsDefContext
	ConstantsDef(i int) IConstantsDefContext
	AllVariablesDef() []IVariablesDefContext
	VariablesDef(i int) IVariablesDefContext
	AllFunctionDef() []IFunctionDefContext
	FunctionDef(i int) IFunctionDefContext
	AllEnumDef() []IEnumDefContext
	EnumDef(i int) IEnumDefContext
	AllClassDef() []IClassDefContext
	ClassDef(i int) IClassDefContext

	// IsScriptContext differentiates from other interfaces.
	IsScriptContext()
}

type ScriptContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyScriptContext() *ScriptContext {
	var p = new(ScriptContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TiqParserRULE_script
	return p
}

func InitEmptyScriptContext(p *ScriptContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TiqParserRULE_script
}

func (*ScriptContext) IsScriptContext() {}

func NewScriptContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ScriptContext {
	var p = new(ScriptContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TiqParserRULE_script

	return p
}

func (s *ScriptContext) GetParser() antlr.Parser { return s.parser }

func (s *ScriptContext) PackageDef() IPackageDefContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IPackageDefContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IPackageDefContext)
}

func (s *ScriptContext) AllConstantsDef() []IConstantsDefContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IConstantsDefContext); ok {
			len++
		}
	}

	tst := make([]IConstantsDefContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IConstantsDefContext); ok {
			tst[i] = t.(IConstantsDefContext)
			i++
		}
	}

	return tst
}

func (s *ScriptContext) ConstantsDef(i int) IConstantsDefContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConstantsDefContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConstantsDefContext)
}

func (s *ScriptContext) AllVariablesDef() []IVariablesDefContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IVariablesDefContext); ok {
			len++
		}
	}

	tst := make([]IVariablesDefContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IVariablesDefContext); ok {
			tst[i] = t.(IVariablesDefContext)
			i++
		}
	}

	return tst
}

func (s *ScriptContext) VariablesDef(i int) IVariablesDefContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVariablesDefContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVariablesDefContext)
}

func (s *ScriptContext) AllFunctionDef() []IFunctionDefContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IFunctionDefContext); ok {
			len++
		}
	}

	tst := make([]IFunctionDefContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IFunctionDefContext); ok {
			tst[i] = t.(IFunctionDefContext)
			i++
		}
	}

	return tst
}

func (s *ScriptContext) FunctionDef(i int) IFunctionDefContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFunctionDefContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFunctionDefContext)
}

func (s *ScriptContext) AllEnumDef() []IEnumDefContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IEnumDefContext); ok {
			len++
		}
	}

	tst := make([]IEnumDefContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IEnumDefContext); ok {
			tst[i] = t.(IEnumDefContext)
			i++
		}
	}

	return tst
}

func (s *ScriptContext) EnumDef(i int) IEnumDefContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IEnumDefContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IEnumDefContext)
}

func (s *ScriptContext) AllClassDef() []IClassDefContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IClassDefContext); ok {
			len++
		}
	}

	tst := make([]IClassDefContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IClassDefContext); ok {
			tst[i] = t.(IClassDefContext)
			i++
		}
	}

	return tst
}

func (s *ScriptContext) ClassDef(i int) IClassDefContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IClassDefContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IClassDefContext)
}

func (s *ScriptContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ScriptContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ScriptContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TiqParserListener); ok {
		listenerT.EnterScript(s)
	}
}

func (s *ScriptContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TiqParserListener); ok {
		listenerT.ExitScript(s)
	}
}

func (p *TiqParser) Script() (localctx IScriptContext) {
	localctx = NewScriptContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, TiqParserRULE_script)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(97)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if _la == TiqParserPACKAGE {
		{
			p.SetState(96)
			p.PackageDef()
		}

	}
	p.SetState(106)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&824633720860) != 0 {
		p.SetState(104)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}

		switch p.GetTokenStream().LA(1) {
		case TiqParserCONST:
			{
				p.SetState(99)
				p.ConstantsDef()
			}

		case TiqParserVAR:
			{
				p.SetState(100)
				p.VariablesDef()
			}

		case TiqParserFUNC:
			{
				p.SetState(101)
				p.FunctionDef()
			}

		case TiqParserENUM:
			{
				p.SetState(102)
				p.EnumDef()
			}

		case TiqParserCLASS:
			{
				p.SetState(103)
				p.ClassDef()
			}

		default:
			p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
			goto errorExit
		}

		p.SetState(108)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IPackageDefContext is an interface to support dynamic dispatch.
type IPackageDefContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	PACKAGE() antlr.TerminalNode
	IDENTIFIER() antlr.TerminalNode

	// IsPackageDefContext differentiates from other interfaces.
	IsPackageDefContext()
}

type PackageDefContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyPackageDefContext() *PackageDefContext {
	var p = new(PackageDefContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TiqParserRULE_packageDef
	return p
}

func InitEmptyPackageDefContext(p *PackageDefContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TiqParserRULE_packageDef
}

func (*PackageDefContext) IsPackageDefContext() {}

func NewPackageDefContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *PackageDefContext {
	var p = new(PackageDefContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TiqParserRULE_packageDef

	return p
}

func (s *PackageDefContext) GetParser() antlr.Parser { return s.parser }

func (s *PackageDefContext) PACKAGE() antlr.TerminalNode {
	return s.GetToken(TiqParserPACKAGE, 0)
}

func (s *PackageDefContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(TiqParserIDENTIFIER, 0)
}

func (s *PackageDefContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *PackageDefContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *PackageDefContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TiqParserListener); ok {
		listenerT.EnterPackageDef(s)
	}
}

func (s *PackageDefContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TiqParserListener); ok {
		listenerT.ExitPackageDef(s)
	}
}

func (p *TiqParser) PackageDef() (localctx IPackageDefContext) {
	localctx = NewPackageDefContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, TiqParserRULE_packageDef)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(109)
		p.Match(TiqParserPACKAGE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(110)
		p.Match(TiqParserIDENTIFIER)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IConstantsDefContext is an interface to support dynamic dispatch.
type IConstantsDefContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	CONST() antlr.TerminalNode
	L_CURLY() antlr.TerminalNode
	R_CURLY() antlr.TerminalNode
	AllConstantDef() []IConstantDefContext
	ConstantDef(i int) IConstantDefContext

	// IsConstantsDefContext differentiates from other interfaces.
	IsConstantsDefContext()
}

type ConstantsDefContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyConstantsDefContext() *ConstantsDefContext {
	var p = new(ConstantsDefContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TiqParserRULE_constantsDef
	return p
}

func InitEmptyConstantsDefContext(p *ConstantsDefContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = TiqParserRULE_constantsDef
}

func (*ConstantsDefContext) IsConstantsDefContext() {}

func NewConstantsDefContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ConstantsDefContext {
	var p = new(ConstantsDefContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = TiqParserRULE_constantsDef

	return p
}

func (s *ConstantsDefContext) GetParser() antlr.Parser { return s.parser }

func (s *ConstantsDefContext) CONST() antlr.TerminalNode {
	return s.GetToken(TiqParserCONST, 0)
}

func (s *ConstantsDefContext) L_CURLY() antlr.TerminalNode {
	return s.GetToken(TiqParserL_CURLY, 0)
}

func (s *ConstantsDefContext) R_CURLY() antlr.TerminalNode {
	return s.GetToken(TiqParserR_CURLY, 0)
}

func (s *ConstantsDefContext) AllConstantDef() []IConstantDefContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IConstantDefContext); ok {
			len++
		}
	}

	tst := make([]IConstantDefContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IConstantDefContext); ok {
			tst[i] = t.(IConstantDefContext)
			i++
		}
	}

	return tst
}

func (s *ConstantsDefContext) ConstantDef(i int) IConstantDefContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConstantDefContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConstantDefContext)
}

func (s *ConstantsDefContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ConstantsDefContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ConstantsDefContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TiqParserListener); ok {
		listenerT.EnterConstantsDef(s)
	}
}

func (s *ConstantsDefContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(TiqParserListener); ok {
		listenerT.ExitConstantsDef(s)
	}
}

func (p *TiqParser) ConstantsDef() (localctx IConstantsDefContext) {
	localctx = NewConstantsDefContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, TiqParserRULE_constantsDef)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(112)
		p.Match(TiqParserCONST)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(122)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case TiqParserL_CURLY:
		{
			p.SetState(113)
			p.Match(TiqParserL_CURLY)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		p.SetState(117)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)

		for _la == TiqParserIDENTIFIER {
			{
				p.SetState(114)
				p.ConstantDef()
			}

			p.SetState(119)
			p.GetErrorHandler().Sync(p)
			if p.HasError() {
				goto errorExit
			}
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(120)
			p.Match(TiqParserR_CURLY)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case TiqParserIDENTIFIER:
		{
			p.SetState(121)
			p.ConstantDef()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}
